Lay-out overflow bug fix

--- a/style/salesboard.css
+++ b/style/salesboard.css
@@ -7,10 +7,13 @@
 }
 html, body {
   height: 100%;
+  margin: 0px;
+  padding: 0px;
 }
 
 h1 {
-  margin: .5em;
+  margin: 0 .5em .5em .5em;
+  padding-top: .5em;
   font-size: 2em;
 }
 
